--- a/src/app/components/login-form/login-form.component.scss
+++ b/src/app/components/login-form/login-form.component.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    width: min(50%, 500px);
+    width: max(min(50%,500px), 300px);
     margin-inline: auto;
 }
 
