--- a/src/app/layouts/user-layout/user-layout.component.html
+++ b/src/app/layouts/user-layout/user-layout.component.html
@@ -10,7 +10,9 @@
         <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" fixedTopGap="56"
             [fixedInViewport]="options.fixed" [fixedTopGap]="options.top" [fixedBottomGap]="options.bottom">
             <mat-nav-list>
-                <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
+                <span *ngFor="let nav of fillerNav">
+                    <a mat-list-item routerLink={{nav.link}}>{{nav.text}}</a>
+                </span>
             </mat-nav-list>
         </mat-sidenav>
 
