--- a/src/app/components/subjects/subjects.component.scss
+++ b/src/app/components/subjects/subjects.component.scss
@@ -1,3 +1,12 @@
 .subject-grid {
     display: grid;
 }
+
+.example-card {
+  max-width: 400px;
+}
+
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+}
